Fixed delete buttons alignment on finder

--- a/client/Finder/styl/resurrection.finder.styl
+++ b/client/Finder/styl/resurrection.finder.styl
@@ -90,7 +90,7 @@ resurrection.finder.styl
     label
       color           white
     button.kdbutton
-      margin          2px 15px 0 0
+      margin          6px 15px 0 0
       padding         2px 4px 2px 4px
       width           auto
       font-weight     normal
@@ -110,7 +110,7 @@ resurrection.finder.styl
     size            15px, 15px
     bg              position, -82px -222px
     right           5px
-    top             3px
+    top             6px
     kdfsprite()
     &:focus
     &:active
